--- a/src/pages/portfolio.css
+++ b/src/pages/portfolio.css
@@ -1,7 +1,6 @@
 Swiper Classes .swiper {
   width: 100%;
   padding: 100px;
-  background-color: blue;
   margin: 0;
 }
 
@@ -16,4 +15,11 @@ Swiper Classes .swiper {
   object-fit: contain;
   width: 100%;
   height: 100%;
+}
+
+.gradient-text {
+  background: linear-gradient(90deg, #a84995, #14147b);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
 }
