--- a/src/index.css
+++ b/src/index.css
@@ -247,3 +247,67 @@ body:has(.card[data-color="green"]:hover) {
   color: #fff; /* Change color to your desired color */
   background-color: #18386b;
 }
+
+/* Swiper Classes fro the library */
+/* Swiper Classes  */
+
+.swiper {
+  width: 100%;
+  padding: 100px;
+  margin: 0;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  /* width: 500px; */
+  /* height: 700px; */
+}
+
+@media only screen and (max-width: 600px) {
+  .swiper-slide {
+    width: 150px;
+    height: 250px;
+    margin: 0;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .swiper-slide {
+    width: 250px;
+    height: 300px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .swiper-slide {
+    width: 280px;
+    height: 350px;
+  }
+}
+
+@media only screen and (min-width: 922px) {
+  .swiper-slide {
+    width: 350px;
+    height: 450px;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .swiper-slide {
+    width: 500px;
+    height: 500px;
+  }
+}
+
+.swiper-slide img {
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+}
+
+.gradient-text {
+  background: linear-gradient(90deg, #e349c5, #000006);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
